# flatten_json

./: .gitignore  README.md  pyproject.toml
flatten_json_util/: __init__.py  core.py  export.py
tests/: test_flatten.py
