[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "flatten-json-util"
version = "0.1.0"
description = "Recursively flatten nested JSON structures into flat dictionaries"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Ahsan" },
]
dependencies = [
    "pandas>=1.0",
    "xlsxwriter>=1.0",
]

[tool.setuptools.packages.find]
include = ["flatten_json_util*"]
